--- a/index.html
+++ b/index.html
@@ -148,6 +148,39 @@
                 </div>
                </div>
           </section>
+         <!-- coundown-section-start-here -->
+           <section>
+               <!-- container-here -->
+                <div class="container mx-auto bg-white px-8 py-12 rounded-3xl grid sm:grid-cols-2 lg:grid-cols-4 gap-12 sm:gap-6">
+                  <!-- card-1 -->
+                     <div class="flex flex-col justify-center items-center gap-4 col-span-1">
+                          <img src="./assets/comment-01.png" alt="" class="">
+                            <h1 class="text-3xl lg:text-[2.5rem] font-extrabold text-[#494949]">235+</h1>
+                           <span class="text-base font-medium text-[#737373]">Happy Client Review</span>
+                     </div>
+                      
+                   <!-- card-2 -->
+                     <div class="flex flex-col justify-center items-center gap-4 col-span-1">
+                         <img src="./assets/departement.png" alt="" class="">
+                           <h1 class="text-3xl lg:text-[2.5rem] font-extrabold text-[#494949]">50+</h1>
+                         <span class="text-base font-medium text-[#737373]">Work Departments</span>
+                     </div>
+
+                  <!-- card-3 -->
+                    <div class="flex flex-col justify-center items-center gap-4 col-span-1">
+                       <img src="./assets/user-group.png" alt="" class="">
+                          <h1 class="text-3xl lg:text-[2.5rem] font-extrabold text-[#494949]">30k+</h1>
+                         <span class="text-base font-medium text-[#737373]">Our Happy Client</span>
+                    </div>
+
+                  <!-- card-4-->
+                     <div class="flex flex-col justify-center items-center gap-4 col-span-1">
+                      <img src="./assets/user-multiple.png" alt="" class="">
+                          <h1 class="text-3xl lg:text-[2.5rem] font-extrabold text-[#494949]">307+</h1>
+                        <span class="text-base font-medium text-[#737373]">Staff Members</span>
+                     </div>
+                </div>
+           </section>
        
 
      </main>
