our-working-proccess-section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                    <div class="hero-content flex-col">
                      <div class="w-[90%] sm:w-[70%] m-auto"> 
                        <img src="./assets/banner.png"class="w-full m-auto rounded-lg" /></div>
-                        <div class="text-center">
+                        <div class="text-center lg:w-[80%]">
                            <h1 class="text-3xl md:text-5xl lg:text-6xl font-extrabold tracking-tight md:leading-[3.5rem] lg:leading-snug md:mb-3">A barn house of this design has a striking       appearance</h1>
                              <p class="py-6 text-base font-medium text-[#494949]">
                                  The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents, and large windows that flood the space with natural light.
@@ -98,8 +98,8 @@
           <section class="py-6 sm:py-10 md:py-28">
               <!-- container-here -->
                <div class="container mx-auto">
-                <div class="hero ">
-                  <div class="hero-content flex-col-reverse lg:flex-row-reverse  gap-12 lg:gap-10">
+                <div class="hero">
+                  <div class="hero-content px-0 flex-col-reverse lg:flex-row-reverse  gap-12 lg:gap-10">
                     <!-- right-side-content -->
                         <div class="w-full h-[400px] lg:w-1/2 mx-auto">
                            <img
@@ -181,6 +181,50 @@
                      </div>
                 </div>
            </section>
+           <!-- our-working-proccess-section-here -->
+            <section class="py-28">
+                <!-- container-here -->
+                 <div class="container mx-auto">
+                   <!-- text-content -->
+                    <div class="text-center mb-8 md:w-[70%] mx-auto">
+                        <button class="btn bg-white rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-[#494949]"><i class="fa-solid fa-arrow-right text-black text-center mr-3"></i>How we works</a></button>
+                            <h1 class="text-2xl sm:text-3xl lg:text-[2.5rem] font-extrabold leading-8 md:leading-snug mb-4 md:mb-6 ">Our Works Process</h1>
+                             <p class="text-[#494949] text-base font-medium ">
+                              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents..
+                           </p>
+                      </div> 
+                  <!-- bottom-card-content-wrap -->
+                  <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-12 sm:gap-6">
+                    <!-- card-1 -->
+                      <div class="flex flex-col justify-center items-start p-6 gap-3 col-span-1 bg-[#E7C1D3] rounded-2xl">
+                         <img src="./assets/concept.png" alt="" class="">
+                            <h1 class="text-xl font-extrabold text-[#1C1C1C]">Concept</h1>
+                         <span class="text-base font-medium text-[#494949]">HThe barn house captivates with its blend of rustic charm and modern.</span>
+                      </div>
+                  
+                    <!-- card-2 -->
+                     <div class="flex flex-col justify-center items-start p-6 gap-3 col-span-1 bg-[#EFDA6E] rounded-2xl">
+                        <img src="./assets/flow-chart.png" alt="" class="">
+                           <h1 class="text-xl font-extrabold text-[#1C1C1C]">Design Process</h1>
+                         <span class="text-base font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</span>
+                     </div>
+
+                    <!-- card-3 -->
+                      <div class="flex flex-col justify-center items-start p-6 gap-3 col-span-1 bg-[#A4DAC3] rounded-2xl">
+                         <img src="./assets/vision.png" alt="" class="">
+                           <h1 class="text-xl font-extrabold text-[#1C1C1C]">Supervision</h1>
+                         <span class="text-base font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</span>
+                      </div>
+
+                    <!-- card-4-->
+                      <div class="flex flex-col justify-center items-start p-6 gap-3 col-span-1 bg-[#77AAEA] rounded-2xl">
+                        <img src="./assets/budget-planning.png" alt="" class="">
+                         <h1 class="text-xl font-extrabold text-[#1C1C1C]">Budget Planning</h1>
+                     <span class="text-base font-medium text-[#494949]">The barn house captivates with its blend of rustic charm and modern.</span>
+                  </div>
+                 </div>
+              </div>
+         </section>
        
 
      </main>
