our-working-proccess-section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="https://kit.fontawesome.com/8311064123.js" crossorigin="anonymous"></script>
     <script src="./tailwind.config.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+       .col-span-half{
+            grid-column: 3/2;
+       }
+    </style>
 </head>
 <body style="font-family: manrope;">
      
@@ -194,7 +199,7 @@
                            </p>
                       </div> 
                   <!-- bottom-card-content-wrap -->
-                  <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-12 sm:gap-6">
+                  <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-5 sm:gap-6">
                     <!-- card-1 -->
                       <div class="flex flex-col justify-center items-start p-6 gap-3 col-span-1 bg-[#E7C1D3] rounded-2xl">
                          <img src="./assets/concept.png" alt="" class="">
@@ -224,7 +229,59 @@
                   </div>
                  </div>
               </div>
-         </section>
+          </section>
+           <!--portfolio-section-start-here  -->
+           <section class="pb-10 md:pb-24">
+               <div class="container mx-auto">
+                 <!-- text-content -->
+                   <div class="text-center mb-8 md:w-[70%] mx-auto">
+                      <button class="btn bg-white rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-[#494949"><i  class="fa-solid fa-arrow-right text-black text-center mr-3"></i>Explore our Latest works</a></button>
+                          <h1 class="text-2xl sm:text-3xl lg:text-[2.5rem] font-extrabold leading-8 md:leading-snug mb-4 md:mb-6 ">Our Latest Portfolio</h1>
+                            <p class="text-[#494949] text-base font-medium ">
+                               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents..
+                          </p>
+                     </div> 
+                   <!-- bottom-content-wrap -->
+                      <div class="grid grid-cols-1 lg:grid-cols-12  gap-6">
+                        <!-- card-1-->
+                          <div class="flex flex-col sm:flex-row sm:justify-between items-center p-6 gap-6 bg-white lg:border border-[#E9E9E9] rounded-2xl sm:col-span-2 lg:col-span-8 ">
+                             <img src="./assets/img1.png" alt="" class="w-full sm:w-1/2 mx-auto lg:h-full object-fill rounded-2xl">
+                               <!--  -->
+                                  <div class="space-y-3 sm:w-1/2 mx-auto">
+                                    <h1 class="text-xl font-extrabold text-[#494949] mb-4">Commercial</h1>
+                                      <span class="text-base font-medium text-[#737373]">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</span>
+                                    <button class="block rounded-[32px] text-xl font-extrabold"><a href="">View Details<span class=" bg-[#ABEF5F] rounded-[50%] px-[6px] py-[1px] ml-2"><i class="fa-solid fa-arrow-right text-black text-center -rotate-45"></i></span></a></button>
+                               </div>
+                          </div> 
+                         <!-- card-2-->
+                            <div class="w-full mx-auto p-6 rounded-2xl col-span-1 lg:col-span-4 bg-white lg:border border-[#E9E9E9]">
+                                <img src="./assets/img2.png" alt="" class="w-full mx-auto h-60 lg:h-full object-fill rounded-2xl "> 
+                            </div>
+                         <!-- card-3-->
+                           <div class="w-full mx-auto p-6 rounded-2xl col-span-1  lg:col-span-3 bg-white lg:border border-[#E9E9E9]">
+                               <img src="./assets/img3.png" alt="" class="w-full mx-auto h-60 lg:h-full object-fill rounded-2xl">
+                           </div>
+                         <!-- card-4-->
+                          <div class="flex flex-col sm:flex-row sm:justify-between items-center p-6 gap-6 rounded-2xl sm:col-span-2 lg:col-span-6 bg-white lg:border border-[#E9E9E9]">
+                            <img src="./assets/img1.png" alt="" class="w-full sm:w-1/2 mx-auto lg:h-full object-fill rounded-2xl">
+                              <!--  -->
+                                 <div class="space-y-3 sm:w-1/2 mx-auto">
+                                   <h1 class="text-xl font-extrabold text-[#494949] mb-4">Commercial</h1>
+                                      <span class="text-base font-medium text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </span>
+                                  <button class="block rounded-[32px] text-xl font-extrabold"><a href="">View Details<span class=" bg-[#ABEF5F] rounded-[50%] px-[6px] py-[1px] ml-2"><i class="fa-solid fa-arrow-right text-black text-center -rotate-45"></i></span></a></button>
+                              </div>
+                         </div> 
+                           <!-- card-5-->
+                            <div class="w-full mx-auto p-6 rounded-2xl col-span-1 lg:col-span-3 bg-white lg:border border-[#E9E9E9]">
+                                <img src="./assets/img5.png" alt="" class="w-full mx-auto h-60 lg:h-full object-fill rounded-2xl">
+                            </div>
+                           <!-- card 6--->
+                            <div class="w-full mx-auto p-6 rounded-2xl col-span-1 lg:hidden bg-white lg:border border-[#E9E9E9]">
+                              <img src="./assets/img5.png" alt="" class="w-full mx-auto h-60 lg:h-full object-fill rounded-2xl">
+                           </div>
+                       </div>
+                   </div>
+            </section>
        
 
      </main>
