Our Latest Portfolio

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                <div class="container mx-auto">
                  <!-- text-content -->
                    <div class="text-center mb-8 md:w-[70%] mx-auto">
-                      <button class="btn bg-white rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-[#494949"><i  class="fa-solid fa-arrow-right text-black text-center mr-3"></i>Explore our Latest works</a></button>
+                      <button class="btn bg-[#ABEF5F33] rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-[#494949"><i  class="fa-solid fa-arrow-right text-black text-center mr-3"></i>Explore our Latest works</a></button>
                           <h1 class="text-2xl sm:text-3xl lg:text-[2.5rem] font-extrabold leading-8 md:leading-snug mb-4 md:mb-6 ">Our Latest Portfolio</h1>
                             <p class="text-[#494949] text-base font-medium ">
                                The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents..
@@ -282,6 +282,20 @@
                        </div>
                    </div>
             </section>
+            <!-- Read Our Articles and News-section -->
+             <section>
+                <!-- container-here -->
+                  <div class="container mx-auto">
+                    <!-- text-content -->
+                      <div class="text-center mb-8 md:w-[70%] mx-auto">
+                          <button class="btn bg-[#ABEF5F33] rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-  [#494949"><i  class="fa-solid fa-arrow-right text-black text-center mr-3"></i>Explore our Latest works</a></button>
+                            <h1 class="text-2xl sm:text-3xl lg:text-[2.5rem] font-extrabold leading-8 md:leading-snug mb-4 md:mb-6 ">Our Latest Portfolio</h1>
+                               <p class="text-[#494949] text-base font-medium ">
+                               The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents..
+                           </p>
+                       </div> 
+                  </div>
+             </section>
        
 
      </main>
