--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body style="font-family: manrope;">
      
 <!-- header-start-here -->
-    <header class="p-6 md:px-20 xl:px-32 md:pt-14 bg-gradient-to-t from-[#FFFFFF] to-[#f7f7f7]">
+    <header class="py-8 md:py-10 lg:pt-14 px-6 md:px-20 xl:px-32 bg-gradient-to-t from-[#FFFFFF] to-[#f7f7f7]">
         <!-- container-here -->
           <div class="container mx-auto">
             <div class="navbar p-0">
@@ -356,7 +356,7 @@
                   </div>
              </section>
             <!--Let’s Discuss Next Project  -->
-              <section>
+              <section style="background-image: url(./assets/bg.jpg); background-position: center; background-repeat: no-repeat;background-size: cover;" class="pb-14 md:pb-24 lg:pb-28">
                 <!-- conatiner-here -->
                     <div class="container mx-auto">
                     <!-- text-content -->
@@ -385,8 +385,31 @@
                </section>
             </main>
      <!-- footer-started-here -->
-         <footer>
-             
+         <footer class="py-14 md:py-24 lg:py-28 bg-[#1C1C1C] px-6 lg:px-20 xl:px-32">
+           <!-- container-here -->
+              <div class="container mx-auto md:w-[80%]">
+                <!-- text-content -->
+                <div class="text-center mb-6  mx-auto">
+                   <div class=" ">
+                       <a class="text-3xl font-extrabold text-[#E9E9E9]"> <span class=" bg-[#ABEF5F] rounded-full px-[8px] py-[0px] mr-2"><i class="fa-solid fa-arrow-right text-black  text-center -rotate-45 "></i></span>Rinterio</a>
+                           </div>
+                          <p class="text-[#737373] text-base font-medium mt-5">
+                        The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood,sleek metal accents..
+                     </p>
+                 </div>
+                 <!-- menu-items -->
+                 <div class="navbar flex flex-col sm:flex-row justify-between items-center gap-5 text-[#E9E9E9] capitalize text-base font-normal ">
+                    <li class="hover:text-[#494949] hover:font-extrabold duration-200 "><a class="">home</a></li>
+                       <li class="hover:text-[#494949] hover:font-extrabold duration-200"><a>services</a></li>
+                          <li class="hover:text-[#494949] hover:font-extrabold duration-200"><a>portfolio</a></li>
+                        <li class="hover:text-[#494949] hover:font-extrabold duration-200"><a>blog</a></li>
+                    <li class="hover:text-[#494949] hover:font-extrabold duration-200"><a>contact us</a></li>
+                 </div>
+                  <!-- button -->
+                  <div class="text-center mt-6">
+                     <a class="w-full sm:w-56 h-14 btn bg-[#ABEF5F] rounded-[32px] text-xl font-extrabold text-[#1C1C1C]">Book Consult <span class=" bg-black rounded-[50%]  w-8 h-8"><i class="fa-solid fa-arrow-right text-white text-center -rotate-45"></i></span></a>
+                </div>
+             </div>
         </footer>    
     </body>
 </html>
