--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- container-here -->
           <div class="container mx-auto">
             <div class="navbar p-0">
-               <div class="w-full sm:w-[40%] m-auto">
+               <div class="w-[90%] sm:w-[40%] m-auto">
                    <a class="text-3xl font-extrabold"> <i class="fa-solid fa-arrow-right mb-1 text-black  text-center -rotate-45 align-middle bg-[#ABEF5F] rounded-full px-[8px] py-[3px] mr-2 text-xl"></i>Rinterio</a>    
                </div>
              <!-- menu-items -->
@@ -33,7 +33,7 @@
               </ul>
             </div>
             <!-- navbar-end -->
-            <div class="navbar-end">
+            <div class="navbar-end w-[10%] sm:w-3/5">
                 <div class="hidden sm:contents space-x-3"> 
                     <span class="bg-white rounded-full px-[11px] py-[7px]"><i class="fa-solid fa-magnifying-glass"></i></span>
                        <span class="bg-white rounded-full px-[11px] py-[7px]"><i class="fa-solid fa-cart-shopping"></i></span> 
@@ -186,7 +186,7 @@
                         <button class="btn bg-white rounded-[32px] text-base font-bold px-6 py-2 mb-5"><a href="" class="text-[#494949]"><i class="fa-solid fa-arrow-right text-black text-center mr-3"></i>How we works</a></button>
                             <h1 class="text-2xl sm:text-3xl lg:text-[2.5rem] font-extrabold leading-8 md:leading-snug mb-4 md:mb-6 ">Our Works Process</h1>
                              <p class="text-[#494949] text-base font-medium ">
-                              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents..
+                              The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
                            </p>
                       </div> 
                   <!-- bottom-card-content-wrap -->
@@ -239,9 +239,9 @@
                           <div class="flex flex-col sm:flex-row sm:justify-between items-center p-6 gap-6 bg-white lg:border border-[#E9E9E9] rounded-2xl sm:col-span-2 lg:col-span-8 ">
                              <img src="./assets/img1.png" alt="" class="w-full sm:w-1/3 mx-auto sm:h-full  object-fill rounded-2xl">
                                <!--  -->
-                                  <div class="space-y-3 sm:w-2/3  mx-auto">
-                                    <h1 class="text-xl font-extrabold text-[#494949] mb-4">Commercial</h1>
-                                     <span class="text-base font-medium text-[#737373]">Discover our commercial projects that blend rustic charm with modern elegance. Explore innovative designs that inspire.</span>
+                                  <div class="space-y-3 sm:w-2/3  mx-auto ">
+                                    <h1 class="block text-xl font-extrabold text-[#494949] mb-4">Commercial</h1>
+                                     <span class="block text-base font-medium text-[#737373]">Discover our commercial projects that blend rustic charm with modern elegance. Explore innovative designs that inspire.</span>
                                    <button class="block rounded-[32px] text-xl font-extrabold"><a href="">View Details<span class=" bg-[#ABEF5F] rounded-[50%] px-[6px] py-[1px] ml-2"><i class="fa-solid fa-arrow-right text-black text-center -rotate-45"></i></span></a></button>
                                </div>
                            </div> 
@@ -393,7 +393,7 @@
                                         </div>
                                        <div class="space-y-3">
                                      <h1 class="text-xl font-extrabold text-[#494949] mb-4">Rustic Charm Meets Modern Architecture</h1>
-                                   <span class="text-base font-medium text-[#737373]">Combining traditional elements with contemporary styles, creating a harmonious and inviting living space. </span>
+                                   <span class="text-base font-medium text-[#737373]">Combine traditional elements with modern styles for a harmonious, inviting home.</span>
                                  <button class="block rounded-[32px] text-[1.1rem] font-extrabold"><a href="">Read More<span class=" bg-[#ABEF5F] rounded-[50%] px-[6px] py-[1px] ml-2"><i class="fa-solid fa-arrow-right text-black text-center -rotate-45"></i></span></a></button>
                               </div>
                             </div>
